<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:padding="24dp"
    tools:context=".RegisterActivity">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="0dp" />

    <ImageView
        android:id="@+id/logo_view"
        android:layout_width="31dp"
        android:layout_height="36dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="@id/back_button"
        app:layout_constraintStart_toEndOf="@id/back_button"
        android:layout_marginStart="130dp"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title_register"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_view" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="34dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/text_above_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_name"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_rounded_edittext"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textColorHint="@color/gray"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_profile"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_rounded_edittext"
                android:entries="@array/profile_array"
                android:paddingVertical="12dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_email"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_rounded_edittext"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="15dp"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_phone"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_rounded_edittext"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="15dp"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_password"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_rounded_edittext"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="15dp"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_confirm_password"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_rounded_edittext"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="15dp"
                tools:ignore="Autofill" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/text_above_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sesion_button_clickable"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_start_register" />

    <Button
        android:id="@+id/button_start_register"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background_dark"
        app:backgroundTint="@null"
        android:text="@string/button_start"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>